gcc/testsuite/rust/rustc/ui/rfcs/rfc-2396-target_feature-11/feature-gate-target_feature_11.rs
// only-x86_64

#[target_feature(enable = "sse2")] // { dg-error ".E0658." "" { target *-*-* } }
fn foo() {}

fn main() {}

